--- a/StockAnalysis/UserInfo/UserInfoViewController.xib
+++ b/StockAnalysis/UserInfo/UserInfoViewController.xib
@@ -12,6 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UserInfoViewController">
             <connections>
+                <outlet property="usernameLabel" destination="eEV-nN-5FV" id="hNm-Hg-TgS"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
