--- a/StockAnalysis/Login/ResetPasswordViewController.xib
+++ b/StockAnalysis/Login/ResetPasswordViewController.xib
@@ -229,7 +229,7 @@
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q6d-G8-YB9">
                             <rect key="frame" x="15" y="216" width="345" height="47"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="backgroundColor" red="1" green="0.75825585527128136" blue="0.4086778826052484" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="backgroundColor" red="0.95686274509803926" green="0.72549019607843135" blue="0.25882352941176473" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <state key="normal" title="下一步">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
