--- a/StockAnalysis/Exchange/ChargeAddressViewController.xib
+++ b/StockAnalysis/Exchange/ChargeAddressViewController.xib
@@ -12,6 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ChargeAddressViewController">
             <connections>
+                <outlet property="assetName" destination="OBm-V7-q2I" id="uwc-Od-PMy"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -25,40 +26,43 @@
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZuV-FD-8mh">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="45"/>
+                            <connections>
+                                <action selector="clickSelectAsset:" destination="-1" eventType="touchUpInside" id="tac-7l-HEa"/>
+                            </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="选择" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tl7-mF-mID">
-                            <rect key="frame" x="28" y="12" width="35" height="21"/>
+                            <rect key="frame" x="28" y="12" width="29" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="21" id="8DE-Of-lGL"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow_right" translatesAutoresizingMaskIntoConstraints="NO" id="4ro-uG-bds">
+                            <rect key="frame" x="335" y="7" width="26" height="26"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="26" id="9Ri-7b-65f"/>
+                            </constraints>
+                        </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="期货" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OBm-V7-q2I">
-                            <rect key="frame" x="259" y="12" width="35" height="21"/>
+                            <rect key="frame" x="173" y="12" width="29" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="21" id="hj5-oW-lBD"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Page next" translatesAutoresizingMaskIntoConstraints="NO" id="4ro-uG-bds">
-                            <rect key="frame" x="330" y="7" width="18" height="31"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="31" id="9Ri-7b-65f"/>
-                            </constraints>
-                        </imageView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="4ro-uG-bds" secondAttribute="trailing" constant="27" id="5us-bb-7KC"/>
+                        <constraint firstAttribute="trailing" secondItem="4ro-uG-bds" secondAttribute="trailing" constant="14" id="5us-bb-7KC"/>
                         <constraint firstAttribute="height" constant="45" id="BMA-7K-AIZ"/>
                         <constraint firstAttribute="bottom" secondItem="ZuV-FD-8mh" secondAttribute="bottom" id="CDF-QA-DCA"/>
-                        <constraint firstItem="4ro-uG-bds" firstAttribute="centerY" secondItem="ycj-ZR-AhD" secondAttribute="centerY" id="GfQ-Yr-iYI"/>
+                        <constraint firstItem="OBm-V7-q2I" firstAttribute="centerX" secondItem="ycj-ZR-AhD" secondAttribute="centerX" id="CqV-I5-hZI"/>
+                        <constraint firstItem="4ro-uG-bds" firstAttribute="centerY" secondItem="ycj-ZR-AhD" secondAttribute="centerY" constant="-2.5" id="GfQ-Yr-iYI"/>
                         <constraint firstItem="ZuV-FD-8mh" firstAttribute="leading" secondItem="ycj-ZR-AhD" secondAttribute="leading" id="RL5-PT-5V8"/>
-                        <constraint firstAttribute="trailing" secondItem="OBm-V7-q2I" secondAttribute="trailing" constant="81" id="RSF-6K-3SW"/>
                         <constraint firstItem="OBm-V7-q2I" firstAttribute="centerY" secondItem="ycj-ZR-AhD" secondAttribute="centerY" id="TOP-sW-07b"/>
                         <constraint firstItem="ZuV-FD-8mh" firstAttribute="top" secondItem="ycj-ZR-AhD" secondAttribute="top" id="c40-xm-ZLX"/>
                         <constraint firstItem="Tl7-mF-mID" firstAttribute="centerY" secondItem="ycj-ZR-AhD" secondAttribute="centerY" id="ckg-bL-zI5"/>
@@ -67,48 +71,49 @@
                     </constraints>
                 </view>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="J0E-lj-3QT">
-                    <rect key="frame" x="82" y="100" width="211" height="163"/>
+                    <rect key="frame" x="117" y="120" width="140" height="140"/>
+                    <color key="backgroundColor" red="0.99019607843137258" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="211" id="xsL-J7-aeD"/>
-                        <constraint firstAttribute="height" constant="163" id="yF0-gJ-5UV"/>
+                        <constraint firstAttribute="width" constant="140" id="xsL-J7-aeD"/>
+                        <constraint firstAttribute="height" constant="140" id="yF0-gJ-5UV"/>
                     </constraints>
                 </imageView>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="1234567894561231231231231231231245435415461334313" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="INc-bI-xjU">
-                    <rect key="frame" x="16" y="271" width="343" height="95"/>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="1234567894561231231231231231231245435415" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="INc-bI-xjU">
+                    <rect key="frame" x="83" y="293" width="210" height="45"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="95" id="aCC-V7-D3J"/>
+                        <constraint firstAttribute="height" constant="45" id="aCC-V7-D3J"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W5R-6h-qDz">
-                    <rect key="frame" x="77.5" y="405" width="220" height="43"/>
+                    <rect key="frame" x="83" y="408" width="210" height="47"/>
                     <color key="backgroundColor" red="0.95686274509803926" green="0.72549019607843135" blue="0.25882352941176473" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="220" id="Wgk-xW-obz"/>
-                        <constraint firstAttribute="height" constant="43" id="fvR-bH-VpJ"/>
+                        <constraint firstAttribute="width" constant="210" id="Wgk-xW-obz"/>
+                        <constraint firstAttribute="height" constant="47" id="fvR-bH-VpJ"/>
                     </constraints>
                     <state key="normal" title="复制地址">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                            <integer key="value" value="20"/>
+                            <integer key="value" value="25"/>
                         </userDefinedRuntimeAttribute>
                         <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                     </userDefinedRuntimeAttributes>
                 </button>
             </subviews>
-            <color key="backgroundColor" red="0.98683822336535765" green="0.98683822336535765" blue="0.98683822336535765" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="J0E-lj-3QT" firstAttribute="centerX" secondItem="Q5M-cg-NOt" secondAttribute="centerX" id="2Ir-Wi-zXN"/>
-                <constraint firstItem="INc-bI-xjU" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="16" id="6a4-7O-8UV"/>
+                <constraint firstItem="INc-bI-xjU" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="83" id="6a4-7O-8UV"/>
                 <constraint firstItem="W5R-6h-qDz" firstAttribute="centerX" secondItem="Q5M-cg-NOt" secondAttribute="centerX" id="EqP-Zd-LUy"/>
-                <constraint firstItem="J0E-lj-3QT" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="80" id="J6H-Es-TvI"/>
-                <constraint firstItem="INc-bI-xjU" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="251" id="Kfg-d2-igF"/>
+                <constraint firstItem="J0E-lj-3QT" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="100" id="J6H-Es-TvI"/>
+                <constraint firstItem="INc-bI-xjU" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="273" id="Kfg-d2-igF"/>
                 <constraint firstItem="ycj-ZR-AhD" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="19" id="UWG-dO-Ccg"/>
-                <constraint firstItem="W5R-6h-qDz" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="385" id="bT5-hd-nHF"/>
+                <constraint firstItem="W5R-6h-qDz" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="388" id="bT5-hd-nHF"/>
                 <constraint firstItem="INc-bI-xjU" firstAttribute="centerX" secondItem="Q5M-cg-NOt" secondAttribute="centerX" id="cCd-P5-yd4"/>
                 <constraint firstItem="ycj-ZR-AhD" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="xGa-E2-3zB"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="ycj-ZR-AhD" secondAttribute="trailing" id="xUr-pE-hlt"/>
@@ -118,6 +123,6 @@
         </view>
     </objects>
     <resources>
-        <image name="Page next" width="18" height="31"/>
+        <image name="arrow_right" width="26" height="26"/>
     </resources>
 </document>
