--- a/StockAnalysis/Exchange/ExchangeViewController.xib
+++ b/StockAnalysis/Exchange/ExchangeViewController.xib
@@ -205,7 +205,7 @@
                     </constraints>
                 </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fYb-TW-Wpn">
-                    <rect key="frame" x="0.0" y="325" width="375" height="342"/>
+                    <rect key="frame" x="16" y="325" width="343" height="342"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </tableView>
                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FDh-ju-ZMy">
@@ -242,7 +242,7 @@
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="23C-ay-5WQ" secondAttribute="trailing" id="0Ya-EA-ZAP"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="top" secondItem="Nl4-JD-v9o" secondAttribute="top" constant="-21" id="1qr-aX-G4w"/>
                 <constraint firstItem="Vzb-DH-e65" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="137" id="22X-cV-bw9"/>
-                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="fYb-TW-Wpn" secondAttribute="trailing" id="30r-kX-4yT"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="fYb-TW-Wpn" secondAttribute="trailing" constant="16" id="30r-kX-4yT"/>
                 <constraint firstItem="jKe-gE-l6t" firstAttribute="width" secondItem="cYH-nJ-CJY" secondAttribute="width" id="3e1-g6-0al"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="Vzb-DH-e65" secondAttribute="trailing" id="434-lU-mh2"/>
                 <constraint firstItem="2y8-a0-FV1" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="137" id="5zD-Cc-nJy"/>
@@ -256,7 +256,7 @@
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="Vzb-DH-e65" secondAttribute="trailing" id="ZoU-Q7-yw8"/>
                 <constraint firstItem="cYH-nJ-CJY" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="137" id="f7g-Tl-JCo"/>
                 <constraint firstItem="cYH-nJ-CJY" firstAttribute="width" secondItem="2y8-a0-FV1" secondAttribute="width" id="jBp-Gd-GbQ"/>
-                <constraint firstItem="fYb-TW-Wpn" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="lMR-wf-7Nn"/>
+                <constraint firstItem="fYb-TW-Wpn" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="16" id="lMR-wf-7Nn"/>
                 <constraint firstItem="2y8-a0-FV1" firstAttribute="width" secondItem="Vzb-DH-e65" secondAttribute="width" id="ngK-W7-SPv"/>
                 <constraint firstItem="cYH-nJ-CJY" firstAttribute="leading" secondItem="jKe-gE-l6t" secondAttribute="trailing" id="qxH-1q-FHz"/>
                 <constraint firstItem="jKe-gE-l6t" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="s27-af-IOy"/>
