--- a/StockAnalysis/Exchange/GetMoneyViewController.xib
+++ b/StockAnalysis/Exchange/GetMoneyViewController.xib
@@ -12,6 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GetMoneyViewController">
             <connections>
+                <outlet property="assetName" destination="ntG-GG-uLL" id="TpZ-Lc-VC4"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -42,6 +43,9 @@
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DS0-UO-hI3">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="41"/>
+                            <connections>
+                                <action selector="clickAssetSelect:" destination="-1" eventType="touchUpInside" id="sOQ-e4-baT"/>
+                            </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="选择" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ahk-cZ-C5M">
                             <rect key="frame" x="19" y="10" width="29" height="21"/>
